finxing someissues
