# app/Http/Resources/MatchCollection.php
@@ -4,12 +4,10 @@ namespace App\Http\Resources;
 
 use App\RecruitmentCore\MatchEngine\MatchEngine;
 use Illuminate\Http\Resources\Json\ResourceCollection;
-use App\Models\Person;
 
-class PersonCollection extends ResourceCollection
+class MatchCollection extends ResourceCollection
 {
     protected $engine;
-    protected $person;
 
     public function __construct($resource)
     {
@@ -27,20 +25,19 @@ class PersonCollection extends ResourceCollection
     {
         return [
             'candidates' => $this->collection->transform(function($row) {
-                $person = new Person();
-              return [
-                  //'percentage' => $this->engine->evaluate($row),
-                  'personal_data' => [
-                      'firstname' => $row->firstname,
-                      'lastname' => $row->lastname,
-                      'email' => $row->email,
-                      'gender' => $row->gender,
-                      'born_date' => $row->born_date,
-                      'work_exp_catg ' => $row->work_catg()
-                  ], //$person->fill($row->toArray()),
-                  'backgrounds' => $row->backgrounds,
-                  'work_experiences' => $row->work_experiences,
-              ];
+                return [
+                    'percentage' => $this->engine->evaluate($row),
+                    'personal_data' => [
+                        'firstname' => $row->firstname,
+                        'lastname' => $row->lastname,
+                        'email' => $row->email,
+                        'gender' => $row->gender,
+                        'born_date' => $row->born_date,
+                        'work_exp_catg ' => $row->work_catg()
+                    ],
+                    'backgrounds' => $row->backgrounds,
+                    'work_experiences' => $row->work_experiences,
+                ];
             }),
             'links' => [
                 'next' => $this->resource->nextPageUrl(),
